# face_detection

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
apps/: CMakeLists.txt
apps/face_detection/: CMakeLists.txt
apps/face_detection/src/: main.cpp
cmake/: app.config.cmake  config.cmake  face_detectionconfig.h.in
face_detection/: CMakeLists.txt
face_detection/src/: main.cpp
libs/: CMakeLists.txt
libs/face_detectionlib/: CMakeLists.txt
libs/face_detectionlib/include/: face_detectionlib.h
libs/face_detectionlib/src/: face_detectionlib.cpp
res/: config.h.in
src/: main.cpp
